--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TEAMROHITOFFICIAL45</title>
 
+  <!-- Shaka Player -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css" crossorigin="anonymous">
 
@@ -36,11 +37,10 @@
     }
   </style>
 </head>
-
 <body>
+
 <div class="shaka-video-container" data-shaka-player>
-  <video playsinline preload="auto"
-    poster="https://i.ibb.co/d0yXW75V/108693714.jpg"></video>
+  <video playsinline preload="auto" poster="https://i.ibb.co/q38kYFYf/IMG-20250328-125315-238.jpg"></video>
 </div>
 
 <script>
@@ -52,9 +52,7 @@ document.addEventListener('DOMContentLoaded', async () => {
     return;
   }
 
-  /* =====================
-     URL PARAMS
-  ===================== */
+  // URL Params
   const p = new URLSearchParams(location.search);
   const streamUrl = p.get('url');
   const keyParam  = p.get('key');
@@ -65,67 +63,35 @@ document.addEventListener('DOMContentLoaded', async () => {
     return;
   }
 
-  /* =====================
-     DRM CONFIG
-  ===================== */
+  // DRM Config
   let drmConfig = {};
 
-  // 🔐 ClearKey
   if (keyParam) {
     const [kid, key] = keyParam.split(':');
-    drmConfig = {
-      clearKeys: {
-        [kid]: key
-      }
-    };
+    drmConfig = { clearKeys: { [kid]: key } };
   }
 
-  // 🔐 Widevine
   if (license) {
-    drmConfig = {
-      servers: {
-        'com.widevine.alpha': license
-      }
-    };
+    drmConfig = { servers: { 'com.widevine.alpha': license } };
   }
 
   const video = document.querySelector('video');
   const player = new shaka.Player(video);
-
   const container = document.querySelector('.shaka-video-container');
   const ui = new shaka.ui.Overlay(player, container, video);
 
-  /* =====================
-     UI (OLD THEME)
-  ===================== */
+  // UI Config
   ui.configure({
     controlPanelElements: [
-      'play_pause',
-      'time_and_duration',
-      'mute',
-      'volume',
-      'playback_rate',
-      'spacer',
-      'language',
-      'captions',
-      'picture_in_picture',
-      'quality',
-      'fullscreen'
+      'play_pause', 'time_and_duration', 'mute', 'volume',
+      'playback_rate', 'spacer', 'language', 'captions',
+      'picture_in_picture', 'quality', 'fullscreen'
     ],
-    volumeBarColors: {
-      base: 'rgba(255,192,203,0.3)',
-      level: 'rgb(255,105,180)'
-    },
-    seekBarColors: {
-      base: 'rgba(255,255,0,0.3)',
-      buffered: 'rgba(255,255,0,0.6)',
-      played: 'rgb(255,255,0)'
-    }
+    volumeBarColors: { base: 'rgba(255,192,203,0.3)', level: 'rgb(255,105,180)' },
+    seekBarColors: { base: 'rgba(255,255,0,0.3)', buffered: 'rgba(255,255,0,0.6)', played: 'rgb(255,255,0)' }
   });
 
-  /* =====================
-     PLAYER SETTINGS
-  ===================== */
+  // Player Config
   player.configure({
     drm: drmConfig,
     abr: { enabled: true },
@@ -143,16 +109,23 @@ document.addEventListener('DOMContentLoaded', async () => {
   try {
     await player.load(streamUrl);
 
-    // 🔥 autoplay guaranteed
+    // Autoplay
     video.muted = true;
     await video.play();
     setTimeout(() => video.muted = false, 500);
+
+    // Force quality menu to show
+    ui.getControls().configure({ overflowMenuButtons: ['quality', 'captions'] });
+
+    // Debug: check available variants
+    console.log('Available variants:', player.getVariantTracks());
 
   } catch (e) {
     console.error('Load Error:', e);
   }
 });
 </script>
+
 </body>
 </html>
 
