--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TEAMROHITOFFICIAL45</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TEAMROHITOFFICIAL45</title>
 
-  <!-- Shaka Player -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css" crossorigin="anonymous">
+<!-- Shaka Player -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js"
+crossorigin="anonymous"></script>
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css"
+crossorigin="anonymous">
 
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      background: #000;
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
-      font-family: system-ui, -apple-system, sans-serif;
-    }
-    .shaka-video-container {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-    }
-    video {
-      width: 100%;
-      height: 100%;
-      background: #000;
-      object-fit: contain;
-    }
-    .shaka-spinner-container,
-    .shaka-spinner,
-    .shaka-spinner-svg {
-      display: none !important;
-    }
-  </style>
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html, body {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  overflow: hidden;
+}
+.shaka-video-container {
+  position: absolute;
+  inset: 0;
+}
+video {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  object-fit: contain;
+}
+.shaka-spinner-container {
+  display: none !important;
+}
+</style>
 </head>
+
 <body>
 
 <div class="shaka-video-container" data-shaka-player>
-  <video playsinline preload="auto" poster="https://i.ibb.co/q38kYFYf/IMG-20250328-125315-238.jpg"></video>
+  <video playsinline controls preload="auto"
+  poster="https://i.ibb.co/q38kYFYf/IMG-20250328-125315-238.jpg"></video>
 </div>
 
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
+
   shaka.polyfill.installAll();
 
   if (!shaka.Player.isBrowserSupported()) {
@@ -52,27 +57,48 @@ document.addEventListener('DOMContentLoaded', async () => {
     return;
   }
 
-  // URL Params
-  const p = new URLSearchParams(location.search);
-  const streamUrl = p.get('url');
-  const keyParam  = p.get('key');
-  const license   = p.get('license');
+  // HEX → BASE64 converter
+  function hexToBase64(hex) {
+    const bytes = hex.match(/.{1,2}/g).map(b => parseInt(b, 16));
+    const binary = String.fromCharCode(...bytes);
+    return btoa(binary);
+  }
+
+  const params = new URLSearchParams(location.search);
+  const streamUrl = params.get('url');
+  const keyParam  = params.get('key');
+  const license   = params.get('license');
 
   if (!streamUrl) {
-    alert('Use: ?url=mpd&key=KID:KEY OR ?url=mpd&license=URL');
+    alert('Missing ?url=');
     return;
   }
 
-  // DRM Config
   let drmConfig = {};
 
+  // ClearKey (HEX:HEX supported)
   if (keyParam) {
-    const [kid, key] = keyParam.split(':');
-    drmConfig = { clearKeys: { [kid]: key } };
+    const [kidHex, keyHex] = keyParam.split(':');
+
+    if (kidHex && keyHex) {
+      const kid = hexToBase64(kidHex);
+      const key = hexToBase64(keyHex);
+
+      drmConfig = {
+        clearKeys: {
+          [kid]: key
+        }
+      };
+    }
   }
 
+  // Widevine license
   if (license) {
-    drmConfig = { servers: { 'com.widevine.alpha': license } };
+    drmConfig = {
+      servers: {
+        'com.widevine.alpha': license
+      }
+    };
   }
 
   const video = document.querySelector('video');
@@ -80,49 +106,38 @@ document.addEventListener('DOMContentLoaded', async () => {
   const container = document.querySelector('.shaka-video-container');
   const ui = new shaka.ui.Overlay(player, container, video);
 
-  // UI Config
   ui.configure({
+    addBigPlayButton: true,
     controlPanelElements: [
-      'play_pause', 'time_and_duration', 'mute', 'volume',
-      'playback_rate', 'spacer', 'language', 'captions',
-      'picture_in_picture', 'quality', 'fullscreen'
-    ],
-    volumeBarColors: { base: 'rgba(255,192,203,0.3)', level: 'rgb(255,105,180)' },
-    seekBarColors: { base: 'rgba(255,255,0,0.3)', buffered: 'rgba(255,255,0,0.6)', played: 'rgb(255,255,0)' }
+      'play_pause',
+      'time_and_duration',
+      'mute',
+      'volume',
+      'quality',
+      'fullscreen'
+    ]
   });
 
-  // Player Config
   player.configure({
     drm: drmConfig,
     abr: { enabled: true },
     streaming: {
       bufferingGoal: 20,
-      rebufferingGoal: 3,
-      bufferBehind: 20
+      rebufferingGoal: 3
     }
   });
 
   player.addEventListener('error', e => {
-    console.error('Shaka DRM Error:', e.detail);
+    console.error('Shaka Error:', e.detail);
   });
 
   try {
     await player.load(streamUrl);
-
-    // Autoplay
-    video.muted = true;
-    await video.play();
-    setTimeout(() => video.muted = false, 500);
-
-    // Force quality menu to show
-    ui.getControls().configure({ overflowMenuButtons: ['quality', 'captions'] });
-
-    // Debug: check available variants
-    console.log('Available variants:', player.getVariantTracks());
-
+    console.log('Stream loaded successfully');
   } catch (e) {
-    console.error('Load Error:', e);
+    console.error('Load failed:', e);
   }
+
 });
 </script>
 
