--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@ href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.cs
 crossorigin="anonymous">
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
 }
-html, body {
-  width: 100%;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
+html,body{
+  width:100%;
+  height:100%;
+  background:#000;
+  overflow:hidden;
 }
-.shaka-video-container {
-  position: absolute;
-  inset: 0;
+.shaka-video-container{
+  position:absolute;
+  inset:0;
 }
-video {
-  width: 100%;
-  height: 100%;
-  background: #000;
-  object-fit: contain;
+video{
+  width:100%;
+  height:100%;
+  background:#000;
+  object-fit:contain;
 }
-.shaka-spinner-container {
-  display: none !important;
+.shaka-spinner-container{
+  display:none !important;
 }
 </style>
 </head>
@@ -43,8 +43,14 @@ video {
 <body>
 
 <div class="shaka-video-container" data-shaka-player>
-  <video playsinline controls preload="auto"
-  poster="https://i.ibb.co/q38kYFYf/IMG-20250328-125315-238.jpg"></video>
+  <!-- muted is REQUIRED for autoplay -->
+  <video
+    playsinline
+    controls
+    preload="auto"
+    muted
+    poster="https://i.ibb.co/q38kYFYf/IMG-20250328-125315-238.jpg">
+  </video>
 </div>
 
 <script>
@@ -57,14 +63,13 @@ document.addEventListener('DOMContentLoaded', async () => {
     return;
   }
 
-  // HEX → BASE64 converter
+  // HEX → BASE64
   function hexToBase64(hex) {
     const bytes = hex.match(/.{1,2}/g).map(b => parseInt(b, 16));
-    const binary = String.fromCharCode(...bytes);
-    return btoa(binary);
+    return btoa(String.fromCharCode(...bytes));
   }
 
-  const params = new URLSearchParams(location.search);
+  const params   = new URLSearchParams(location.search);
   const streamUrl = params.get('url');
   const keyParam  = params.get('key');
   const license   = params.get('license');
@@ -76,23 +81,19 @@ document.addEventListener('DOMContentLoaded', async () => {
 
   let drmConfig = {};
 
-  // ClearKey (HEX:HEX supported)
+  // ClearKey (HEX:HEX)
   if (keyParam) {
     const [kidHex, keyHex] = keyParam.split(':');
-
     if (kidHex && keyHex) {
-      const kid = hexToBase64(kidHex);
-      const key = hexToBase64(keyHex);
-
       drmConfig = {
         clearKeys: {
-          [kid]: key
+          [hexToBase64(kidHex)]: hexToBase64(keyHex)
         }
       };
     }
   }
 
-  // Widevine license
+  // Widevine
   if (license) {
     drmConfig = {
       servers: {
@@ -102,8 +103,8 @@ document.addEventListener('DOMContentLoaded', async () => {
   }
 
   const video = document.querySelector('video');
-  const player = new shaka.Player(video);
   const container = document.querySelector('.shaka-video-container');
+  const player = new shaka.Player(video);
   const ui = new shaka.ui.Overlay(player, container, video);
 
   ui.configure({
@@ -133,10 +134,24 @@ document.addEventListener('DOMContentLoaded', async () => {
 
   try {
     await player.load(streamUrl);
-    console.log('Stream loaded successfully');
+    console.log('Stream loaded');
+
+    // 🔥 FORCE AUTOPLAY
+    video.muted = true;
+    await video.play();
+
   } catch (e) {
     console.error('Load failed:', e);
   }
+
+  // 🔊 UNMUTE ON USER INTERACTION
+  const unmute = () => {
+    video.muted = false;
+    document.removeEventListener('click', unmute);
+    document.removeEventListener('touchstart', unmute);
+  };
+  document.addEventListener('click', unmute);
+  document.addEventListener('touchstart', unmute);
 
 });
 </script>
