--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@ href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.cs
 crossorigin="anonymous">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-  width:100%;
-  height:100%;
-  background:#000;
-  overflow:hidden;
+html, body {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  overflow: hidden;
 }
-.shaka-video-container{
-  position:absolute;
-  inset:0;
+.shaka-video-container {
+  position: absolute;
+  inset: 0;
 }
-video{
-  width:100%;
-  height:100%;
-  background:#000;
-  object-fit:contain;
+video {
+  width: 100%;
+  height: 100%;
+  background: #000;
+  object-fit: contain; /* 🔁 ORIGINAL THEME */
 }
-.shaka-spinner-container{
-  display:none !important;
+.shaka-spinner-container {
+  display: none !important;
 }
 </style>
 </head>
@@ -43,7 +43,7 @@ video{
 <body>
 
 <div class="shaka-video-container" data-shaka-player>
-  <!-- ❌ NO controls / ❌ NO poster -->
+  <!-- ❌ native controls hata diye -->
   <video playsinline preload="auto" muted></video>
 </div>
 
@@ -57,13 +57,12 @@ document.addEventListener('DOMContentLoaded', async () => {
     return;
   }
 
-  // HEX → BASE64
   function hexToBase64(hex) {
     const bytes = hex.match(/.{1,2}/g).map(b => parseInt(b, 16));
     return btoa(String.fromCharCode(...bytes));
   }
 
-  const params    = new URLSearchParams(location.search);
+  const params = new URLSearchParams(location.search);
   const streamUrl = params.get('url');
   const keyParam  = params.get('key');
   const license   = params.get('license');
@@ -75,7 +74,6 @@ document.addEventListener('DOMContentLoaded', async () => {
 
   let drmConfig = {};
 
-  // ClearKey
   if (keyParam) {
     const [kidHex, keyHex] = keyParam.split(':');
     if (kidHex && keyHex) {
@@ -87,7 +85,6 @@ document.addEventListener('DOMContentLoaded', async () => {
     }
   }
 
-  // Widevine
   if (license) {
     drmConfig = {
       servers: {
@@ -122,30 +119,23 @@ document.addEventListener('DOMContentLoaded', async () => {
     }
   });
 
-  player.addEventListener('error', e => {
-    console.error('Shaka Error:', e.detail);
-  });
-
   try {
     await player.load(streamUrl);
-    console.log('Stream loaded');
 
-    // 🔥 FORCE AUTOPLAY
-    video.muted = true;
-    await video.play();
+    // 🔥 Safe autoplay without breaking theme
+    setTimeout(() => {
+      video.muted = true;
+      video.play();
+    }, 300);
 
   } catch (e) {
-    console.error('Load failed:', e);
+    console.error(e);
   }
 
-  // 🔊 UNMUTE AFTER USER TAP
-  const unmute = () => {
+  // 🔊 Unmute after first tap
+  document.addEventListener('click', () => {
     video.muted = false;
-    document.removeEventListener('click', unmute);
-    document.removeEventListener('touchstart', unmute);
-  };
-  document.addEventListener('click', unmute);
-  document.addEventListener('touchstart', unmute);
+  }, { once: true });
 
 });
 </script>
