--- a/index.html
+++ b/index.html
@@ -1,145 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TEAMROHITOFFICIAL45</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teamrohitoffical45_live</title>
+    <style>
+        /* General Page Styling */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #000000, #1a1a1a);
+            color: #FFD700;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            text-align: center;
+        }
 
-<!-- Shaka Player -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/shaka-player.ui.min.js"
-crossorigin="anonymous"></script>
-<link rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.7.11/controls.min.css"
-crossorigin="anonymous">
+        /* Glowing Effect for Message */
+        .loading-message {
+            font-size: 18px;
+            font-weight: bold;
+            color: #FFD700;
+            margin-bottom: 10px;
+            padding: 10px 20px;
+            border-radius: 10px;
+            background: rgba(255, 215, 0, 0.1);
+            border: 1px solid rgba(255, 215, 0, 0.5);
+            text-align: center;
+            box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700;
+            animation: glow 1.5s infinite alternate;
+        }
 
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html, body {
-  width: 100%;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
-}
-.shaka-video-container {
-  position: absolute;
-  inset: 0;
-}
-video {
-  width: 100%;
-  height: 100%;
-  background: #000;
-  object-fit: contain; /* 🔁 ORIGINAL THEME */
-}
-.shaka-spinner-container {
-  display: none !important;
-}
-</style>
+        @keyframes glow {
+            0% { box-shadow: 0 0 10px #FFD700, 0 0 20px #FFD700, 0 0 30px #FFD700; }
+            100% { box-shadow: 0 0 15px #FFD700, 0 0 25px #FFD700, 0 0 35px #FFD700; }
+        }
+
+        /* Video Player Styling */
+        .player-container {
+            width: 95%;
+            max-width: 1200px;
+            margin: 20px auto;
+            box-shadow: 0 6px 25px rgba(255, 215, 0, 0.4);
+            border-radius: 15px;
+            overflow: hidden;
+            background: #000;
+        }
+
+        .player-container iframe {
+            border-radius: 15px;
+            width: 100%;
+            height: 100%;
+        }
+
+        /* Join Telegram Button */
+        .join-telegram-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .join-telegram-btn {
+            padding: 10px 20px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #000;
+            background-color: #FFD700;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.6);
+        }
+
+        .join-telegram-btn:hover {
+            background-color: #e6c200;
+        }
+    </style>
 </head>
-
 <body>
 
-<div class="shaka-video-container" data-shaka-player>
-  <!-- ❌ native controls hata diye -->
-  <video playsinline preload="auto" muted></video>
-</div>
+    <!-- Loading Message -->
+    <div class="loading-message">Share The Links With Your Friends</div>
+
+    <!-- Video Player Section -->
+    <div class="player-container">
+        <div style="padding:56.25% 0 0 0;position:relative;">
+            <iframe id="contentFrame" sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts allow-top-navigation" 
+            frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen="true" scrolling="no" 
+            src="https://allrounderlive.pages.dev/player?url=https://dillzy.cricketstream745.workers.dev/live.m3u8" style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe>
+        </div>
+    </div>
+
+    <!-- Join Telegram Button -->
+    <div class="join-telegram-container">
+        <button class="join-telegram-btn" onclick="window.open('https://t.me/+lkbpBqFd0FljNzJl', '_blank')">Join Telegram Channel</button>
+    </div>
 
 <script>
-document.addEventListener('DOMContentLoaded', async () => {
-
-  shaka.polyfill.installAll();
-
-  if (!shaka.Player.isBrowserSupported()) {
-    alert('Browser not supported');
-    return;
-  }
-
-  function hexToBase64(hex) {
-    const bytes = hex.match(/.{1,2}/g).map(b => parseInt(b, 16));
-    return btoa(String.fromCharCode(...bytes));
-  }
-
-  const params = new URLSearchParams(location.search);
-  const streamUrl = params.get('url');
-  const keyParam  = params.get('key');
-  const license   = params.get('license');
-
-  if (!streamUrl) {
-    alert('Missing ?url=');
-    return;
-  }
-
-  let drmConfig = {};
-
-  if (keyParam) {
-    const [kidHex, keyHex] = keyParam.split(':');
-    if (kidHex && keyHex) {
-      drmConfig = {
-        clearKeys: {
-          [hexToBase64(kidHex)]: hexToBase64(keyHex)
-        }
-      };
+    // alert('Join Our Telegram For Latest update')
+    if (confirm("Join Our Telegram Channel @teamrohitofficial45") == true) {
+        window.open("https://t.me/+IhSW51QysxU3NzY1", '_blank');
     }
-  }
+</script>
 
-  if (license) {
-    drmConfig = {
-      servers: {
-        'com.widevine.alpha': license
-      }
-    };
-  }
-
-  const video = document.querySelector('video');
-  const container = document.querySelector('.shaka-video-container');
-  const player = new shaka.Player(video);
-  const ui = new shaka.ui.Overlay(player, container, video);
-
-  ui.configure({
-    addBigPlayButton: true,
-    controlPanelElements: [
-      'play_pause',
-      'time_and_duration',
-      'mute',
-      'volume',
-      'quality',
-      'fullscreen'
-    ]
-  });
-
-  player.configure({
-    drm: drmConfig,
-    abr: { enabled: true },
-    streaming: {
-      bufferingGoal: 20,
-      rebufferingGoal: 3
+<script>
+    // alert('Join Our Telegram For Latest update')
+    if (confirm("Join Our Telegram Channel @teamrohitofficial45") == true) {
+        window.open("https://t.me/+lkbpBqFd0FljNzJl", '_blank');
     }
-  });
-
-  try {
-    await player.load(streamUrl);
-
-    // 🔥 Safe autoplay without breaking theme
-    setTimeout(() => {
-      video.muted = true;
-      video.play();
-    }, 300);
-
-  } catch (e) {
-    console.error(e);
-  }
-
-  // 🔊 Unmute after first tap
-  document.addEventListener('click', () => {
-    video.muted = false;
-  }, { once: true });
-
-});
 </script>
 
 </body>
 </html>
-
