--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
     <script>
         const spotlightContainer = document.getElementById('spotlight-container');
         const gridContainer = document.getElementById('matches-grid');
-        const DATA_URL = 'https://raw.githubusercontent.com/Jitendra-unatti/fancode/refs/heads/main/data/fancode.json';
+        const DATA_URL = 'https://github.com/drmlive/fancode-live-events/blob/main/fancode.json';
         const PLAY_BASE = 'https://teamrofemcodeplyr2.pages.dev/match.html';
 
         // Format language names forbetter display
