--- a/index.html
+++ b/index.html
@@ -5,34 +5,79 @@
 <title>TG-SAMARTH</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Plyr Player -->
+<!-- PLYR -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.css">
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
 
 <style>
-/* ===== GLOBAL ===== */
-html, body {
+/* RESET */
+* {
     margin: 0;
     padding: 0;
-    background: #000;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
     height: 100%;
+    background: #000;
+    overflow: hidden;
     font-family: Arial, sans-serif;
 }
 
-/* GOLD THEME */
-:root {
-    --gold: #ffd700;
-}
-
-/* PLAYER */
+/* ================= PLAYER ================= */
+#player,
+.plyr,
+.plyr__video-wrapper,
 video {
-    width: 100%;
-    height: 100%;
-    background: black;
+    width: 100vw !important;
+    height: 100vh !important;
+    object-fit: contain;
+    background: #000;
 }
 
-/* ===== LOADER SCREEN ===== */
+/* ================= GOLD PLAYER THEME ================= */
+:root {
+    --plyr-color-main: #ffd700;
+}
+
+.plyr--video .plyr__controls {
+    background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));
+}
+
+.plyr__control {
+    color: #ffd700 !important;
+}
+
+.plyr__control:hover {
+    background: rgba(255, 215, 0, 0.25);
+}
+
+.plyr__control--overlaid {
+    background: radial-gradient(circle, #ffd700 0%, #b8860b 65%);
+    box-shadow: 0 0 25px rgba(255, 215, 0, 0.9);
+}
+
+.plyr__progress--played,
+.plyr__volume--display {
+    background: linear-gradient(90deg, #ffd700, #ffcc00);
+}
+
+.plyr__progress--buffer {
+    background: rgba(255, 215, 0, 0.3);
+}
+
+.plyr__time {
+    color: #ffd700;
+}
+
+.plyr__menu__container {
+    background: #000;
+    color: #ffd700;
+}
+
+/* ================= LOADER ================= */
 .loading {
     position: fixed;
     inset: 0;
@@ -44,39 +89,27 @@ video {
 }
 
 .loading-text span {
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
-    letter-spacing: 1px;
-    display: inline-block;
     margin: 0 2px;
-
-    background: linear-gradient(
-        120deg,
-        #ffd700 20%,
-        #fff4b0 40%,
-        #ffd700 60%
-    );
+    background: linear-gradient(120deg, #ffd700 20%, #fff4b0 45%, #ffd700 70%);
     background-size: 200% auto;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-
-    text-shadow:
-        0 0 6px rgba(255,215,0,0.8),
-        0 0 12px rgba(255,215,0,0.5);
-
+    text-shadow: 0 0 6px rgba(255,215,0,0.8);
     animation: shine 2s linear infinite;
 }
 
 @keyframes shine {
     from { background-position: 0% center; }
-    to   { background-position: 200% center; }
+    to { background-position: 200% center; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- LOADING SCREEN -->
+<!-- LOADER -->
 <div id="loading" class="loading">
     <div class="loading-text">
         <span>T</span><span>E</span><span>A</span><span>M</span>
@@ -102,16 +135,20 @@ document.addEventListener("DOMContentLoaded", () => {
 
         hls.on(Hls.Events.MANIFEST_PARSED, () => {
             new Plyr(video, {
-                quality: {
-                    default: 720,
-                    options: [1080, 720, 480, 360],
-                    forced: true
-                }
+                controls: [
+                    'play',
+                    'progress',
+                    'current-time',
+                    'mute',
+                    'volume',
+                    'settings',
+                    'fullscreen'
+                ]
             });
 
             setTimeout(() => {
                 document.getElementById("loading").style.display = "none";
-            }, 2000);
+            }, 1500);
         });
     }
 });
@@ -119,3 +156,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
