--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <title>TG-SAMARTH</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- PLYR -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.css">
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
 
 <style>
-/* RESET */
+/* ===== BASIC RESET ===== */
 * {
     margin: 0;
     padding: 0;
@@ -23,29 +22,34 @@ html, body {
     height: 100%;
     background: #000;
     overflow: hidden;
-    font-family: Arial, sans-serif;
 }
 
-/* ================= PLAYER ================= */
-#player,
-.plyr,
-.plyr__video-wrapper,
-video {
-    width: 100vw !important;
-    height: 100vh !important;
-    object-fit: contain;
-    background: #000;
+/* ===== PLAYER CONTAINER ===== */
+.player-wrapper {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    background: black;
 }
 
-/* ================= GOLD PLAYER THEME ================= */
+/* Video */
+#player {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
+
+/* ===== GOLD THEME ===== */
 :root {
     --plyr-color-main: #ffd700;
 }
 
+/* Controls bar */
 .plyr--video .plyr__controls {
     background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));
 }
 
+/* Buttons */
 .plyr__control {
     color: #ffd700 !important;
 }
@@ -54,30 +58,24 @@ video {
     background: rgba(255, 215, 0, 0.25);
 }
 
+/* Play button */
 .plyr__control--overlaid {
-    background: radial-gradient(circle, #ffd700 0%, #b8860b 65%);
-    box-shadow: 0 0 25px rgba(255, 215, 0, 0.9);
+    background: radial-gradient(circle, #ffd700 0%, #b8860b 70%);
+    box-shadow: 0 0 20px rgba(255,215,0,0.8);
 }
 
+/* Progress bar */
 .plyr__progress--played,
 .plyr__volume--display {
     background: linear-gradient(90deg, #ffd700, #ffcc00);
 }
 
-.plyr__progress--buffer {
-    background: rgba(255, 215, 0, 0.3);
-}
-
+/* Time text */
 .plyr__time {
     color: #ffd700;
 }
 
-.plyr__menu__container {
-    background: #000;
-    color: #ffd700;
-}
-
-/* ================= LOADER ================= */
+/* ===== LOADER ===== */
 .loading {
     position: fixed;
     inset: 0;
@@ -91,36 +89,36 @@ video {
 .loading-text span {
     font-size: 18px;
     font-weight: bold;
-    margin: 0 2px;
-    background: linear-gradient(120deg, #ffd700 20%, #fff4b0 45%, #ffd700 70%);
-    background-size: 200% auto;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-shadow: 0 0 6px rgba(255,215,0,0.8);
-    animation: shine 2s linear infinite;
+    color: #ffd700;
+    text-shadow: 0 0 8px rgba(255,215,0,0.8);
+    animation: glow 1.5s ease-in-out infinite alternate;
 }
 
-@keyframes shine {
-    from { background-position: 0% center; }
-    to { background-position: 200% center; }
+@keyframes glow {
+    from { opacity: 0.6; }
+    to { opacity: 1; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- LOADER -->
-<div id="loading" class="loading">
-    <div class="loading-text">
-        <span>T</span><span>E</span><span>A</span><span>M</span>
-        <span>R</span><span>O</span><span>H</span><span>I</span><span>T</span>
-        <span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span>
-        <span>4</span><span>5</span>
-    </div>
-</div>
+<div class="player-wrapper">
 
-<!-- VIDEO PLAYER -->
-<video id="player" playsinline controls></video>
+    <!-- LOADER -->
+    <div id="loading" class="loading">
+        <div class="loading-text">
+            <span>T</span><span>E</span><span>A</span><span>M</span>
+            <span>R</span><span>O</span><span>H</span><span>I</span><span>T</span>
+            <span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span>
+            <span>4</span><span>5</span>
+        </div>
+    </div>
+
+    <!-- VIDEO -->
+    <video id="player" controls playsinline></video>
+
+</div>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
@@ -148,7 +146,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
             setTimeout(() => {
                 document.getElementById("loading").style.display = "none";
-            }, 1500);
+            }, 1200);
         });
     }
 });
