--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 <title>TG-SAMARTH</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- PLYR -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.css">
 <script src="https://cdn.jsdelivr.net/npm/hls.js@1.1.4/dist/hls.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/plyr@3.6.12/dist/plyr.min.js"></script>
 
 <style>
-/* ===== BASIC RESET ===== */
+/* ===== RESET ===== */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* ===== FULLSCREEN BACKGROUND ===== */
 html, body {
     width: 100%;
     height: 100%;
@@ -24,18 +26,23 @@ html, body {
     overflow: hidden;
 }
 
-/* ===== PLAYER CONTAINER ===== */
+/* ===== PLAYER CENTER ===== */
 .player-wrapper {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background: black;
+    position: fixed;
+    inset: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #000;
 }
 
-/* Video */
+/* VIDEO */
 #player {
     width: 100%;
     height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
+    object-fit: contain;
     background: black;
 }
 
@@ -44,12 +51,10 @@ html, body {
     --plyr-color-main: #ffd700;
 }
 
-/* Controls bar */
 .plyr--video .plyr__controls {
     background: linear-gradient(to top, rgba(0,0,0,0.9), rgba(0,0,0,0.6));
 }
 
-/* Buttons */
 .plyr__control {
     color: #ffd700 !important;
 }
@@ -58,66 +63,64 @@ html, body {
     background: rgba(255, 215, 0, 0.25);
 }
 
-/* Play button */
 .plyr__control--overlaid {
-    background: radial-gradient(circle, #ffd700 0%, #b8860b 70%);
-    box-shadow: 0 0 20px rgba(255,215,0,0.8);
+    background: radial-gradient(circle, #ffd700 0%, #b8860b 65%);
+    box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
 }
 
-/* Progress bar */
 .plyr__progress--played,
 .plyr__volume--display {
     background: linear-gradient(90deg, #ffd700, #ffcc00);
 }
 
-/* Time text */
 .plyr__time {
     color: #ffd700;
 }
 
-/* ===== LOADER ===== */
+/* LOADER */
 .loading {
     position: fixed;
     inset: 0;
     background: #000;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     z-index: 9999;
 }
 
 .loading-text span {
     font-size: 18px;
     font-weight: bold;
-    color: #ffd700;
-    text-shadow: 0 0 8px rgba(255,215,0,0.8);
-    animation: glow 1.5s ease-in-out infinite alternate;
+    margin: 0 2px;
+    background: linear-gradient(120deg, #ffd700 20%, #fff4b0 45%, #ffd700 70%);
+    background-size: 200% auto;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: shine 2s linear infinite;
 }
 
-@keyframes glow {
-    from { opacity: 0.6; }
-    to { opacity: 1; }
+@keyframes shine {
+    from { background-position: 0% center; }
+    to { background-position: 200% center; }
 }
 </style>
 </head>
 
 <body>
 
-<div class="player-wrapper">
-
-    <!-- LOADER -->
-    <div id="loading" class="loading">
-        <div class="loading-text">
-            <span>T</span><span>E</span><span>A</span><span>M</span>
-            <span>R</span><span>O</span><span>H</span><span>I</span><span>T</span>
-            <span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span>
-            <span>4</span><span>5</span>
-        </div>
+<!-- LOADER -->
+<div id="loading" class="loading">
+    <div class="loading-text">
+        <span>T</span><span>E</span><span>A</span><span>M</span>
+        <span>R</span><span>O</span><span>H</span><span>I</span><span>T</span>
+        <span>O</span><span>F</span><span>F</span><span>I</span><span>C</span><span>I</span><span>A</span><span>L</span>
+        <span>4</span><span>5</span>
     </div>
+</div>
 
-    <!-- VIDEO -->
-    <video id="player" controls playsinline></video>
-
+<!-- PLAYER -->
+<div class="player-wrapper">
+    <video id="player" playsinline controls></video>
 </div>
 
 <script>
